@@ -141,7 +141,7 @@
       "label": "Send out mail notifications",
       "value": "false",
       "opp": "mm",
-      "options": ["mail-record-watched", "mail-record-new",  "mail-news", "mail-account-new"],
+      "options": ["mail-record-watched", "mail-record-new",  "mail-news", "mail-account-new","mail-attachment-new"],
       "option-def":{
         "mail-news": {
           "label": "News announcements",
@@ -167,6 +167,12 @@
           "value": "false",
           "opp": "mmreu", 
           "opcode": "watchMail"
+        },
+        "mail-attachment-new": {          
+          "label": "New attachments (curators, record owners only)",
+          "value": "false",
+          "opp": "mmatt", 
+          "opcode": "attachMail"
         }
       }
     }
